--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ incremental = false
 [dependencies]
 tick_counter = "0.4.5"
 criterion = "0.5.1"
+core_affinity = "0.8.1"
 
 [[bench]]
 name = "rdtsc"
